--- a/news/4-4-24.md
+++ b/news/4-4-24.md
@@ -1,8 +1,10 @@
 ---
-title: Meeting on April 4th 2024 (in Whatsapp)
+title: Meeting on April 4th 2024
 date: 2024-04-04 16:30
 slug: meeting-2024-04-04
 authors: adam
 ---
 
 Meeting in WhatsApp
+
+- [Founders Meeting](4-4-24.pdf)
