--- a/news/1-5-24.md
+++ b/news/1-5-24.md
@@ -7,7 +7,7 @@ authors: adam
 
 ## Announcing the Bottle Splitter
 
-The bottle splitter is something we a constant need for.  Often, we want to share drams from a bottle but need to organize how to share it.
+The bottle splitter is something we have a constant need for.  Often, we want to share drams from a bottle but need to organize how to share it.
 
 Imagine a site that allows:
 
