first meet post

--- a/news/1-5-24.md
+++ b/news/1-5-24.md
@@ -9,6 +9,8 @@ authors: adam
 
 The bottle splitter is something we have a constant need for.  Often, we want to share drams from a bottle but need to organize how to share it.
 
+<!-- truncate -->
+
 Imagine a site that allows:
 
 - A unique URL for the bottle split
